test/tests/stages/18_structures/invalid_parse/var_decl_two_struct_kws.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  struct
  identifier(s)
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
